# opencode-perf-stats

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/opencode_perf_stats/: __init__.py  __main__.py  cli.py  compare.py  db.py  formatting.py  styles.py  trends.py
src/opencode_perf_stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/opencode_perf_stats/reports/: __init__.py  html.py  markdown.py
src/opencode_perf_stats/web/: __init__.py  app.py
src/opencode_perf_stats/web/static/: app.js  styles.css
src/opencode_perf_stats/web/templates/: aggregate.html  base.html  compare.html  discovery.html  error.html  single.html  trends.html
tests/: test_smoke.py  test_web.py
